--- a/QUIZ_SERVICE/src/main/resources/application.properties
+++ b/QUIZ_SERVICE/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+resilience4j.circuitbreaker.instances.questionServiceCB.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.questionServiceCB.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.questionServiceCB.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.questionServiceCB.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.questionServiceCB.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.questionServiceCB.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.questionServiceCB.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.questionServiceCB.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+management.endpoints.web.exposure.include=health,metrics
